fixed text-align in css for 2v2 layout

--- a/overlaystyle.css
+++ b/overlaystyle.css
@@ -69,6 +69,7 @@ html {
 	  float: left;
 	  margin-left: 58%;
 	  background-color: rgba(0, 0, 0, 0.8);
+	  text-align: left;
 	  }
   
 #playerTeam {
@@ -79,6 +80,7 @@ html {
 	  float: right;
 	  margin-right: 58%;
 	  background-color: rgba(0, 0, 0, 0.8);
+	  text-align: right;
   }
   
   
